<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button android:layout_width="282dp" android:layout_height="wrap_content" android:text="@string/labelScan"
                android:id="@+id/buttonScan" android:layout_gravity="left|center_vertical" android:onClick="startScan"
                android:enabled="true"/>
        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBarScan"
                android:visibility="invisible"
                android:focusableInTouchMode="false"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_columnSpan="2"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelSwitchRSSI"
                android:id="@+id/textView4" />
        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New ToggleButton"
                android:id="@+id/toggleButtonRSSI" android:checked="true" android:onClick="toggleRSSI"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelSwitchMagnetic"
                android:id="@+id/textView5"/>
        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New ToggleButton"
                android:id="@+id/toggleButtonMagnetic"
                android:checked="true" android:onClick="toggleMagnetic"/>
        <Button android:layout_width="282dp" android:layout_height="wrap_content" android:text="@string/labelUpload"
                android:id="@+id/buttonUpload" android:layout_gravity="left|center_vertical"
                android:onClick="startUpload"
                android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:baselineAligned="false" android:layout_gravity="left">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="@dimen/Margin">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelRooms"
                        android:id="@+id/textViewRooms" android:layout_gravity="left"/>
                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerRooms"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/labelGrid" android:id="@+id/textView"
                          android:layout_gravity="center|right"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/labelXXX"
                            android:id="@+id/textView8" android:layout_gravity="center_horizontal"/>
                    <NumberPicker
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/numberPickerXXX" android:orientation="vertical"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/labelYYY"
                            android:id="@+id/textView9" android:layout_gravity="center_horizontal"/>
                    <NumberPicker
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/numberPickerYYY" android:orientation="vertical"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/labelWWW"
                            android:id="@+id/textView10" android:layout_gravity="center_horizontal"/>
                    <NumberPicker
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/numberPickerWWW" android:orientation="vertical"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginTop="@dimen/Margin">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/labelAccuracy"
                        android:id="@+id/textView6"/>
                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerAccuracy" android:clickable="true"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginTop="@dimen/Margin">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelOrientation"
                        android:id="@+id/textView7"/>
                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerOrientation" android:clickable="true"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginLeft="@dimen/Margin"
                android:layout_marginTop="@dimen/Margin">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelDuration"
                    android:id="@+id/textViewDuration" android:layout_gravity="center|left"/>
            <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberPickerDuration"
                    android:orientation="horizontal"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginLeft="@dimen/Margin"
                android:layout_marginTop="@dimen/Margin">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/labelSampling"
                      android:id="@+id/textViewSampling"
                      android:layout_gravity="center|left"/>
            <NumberPicker android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/numberPickerFrequency"
                          android:orientation="horizontal"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="2"
                android:layout_marginLeft="@dimen/Margin" android:layout_marginTop="@dimen/Margin">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelUploadAccount"
                        android:id="@+id/textView1"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ChangeAccount"
                            android:id="@+id/buttonChangeAccount" android:gravity="right"
                            android:onClick="changeAccount"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewUploadAccount" android:hint="@string/labalUploadAccountHint"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonSettings"
                    android:id="@+id/buttonSettings" android:enabled="false" android:onClick="updateSettings"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uploadAll"
                        android:id="@+id/buttonUploadAll" android:onClick="updateAll" android:enabled="false"/>
                <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressBarUploadAll" android:visibility="invisible"
                        style="?android:attr/progressBarStyleHorizontal"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:baselineAligned="false">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelRSSIResults"
                    android:id="@+id/textView2"/>
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listViewRSSI"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelMagnetometer"
                    android:id="@+id/textView3" android:layout_columnSpan="2"/>
            <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/listViewMagnetic"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

